pdf/pdfium/pdfium_range.cc
@@ -12,6 +12,8 @@ namespace chrome_pdf {
 
 namespace {
 
+constexpr base::char16 kZeroWidthWhitespace = 0x200B;
+
 void AdjustForBackwardsRange(int* index, int* count) {
   int& char_index = *index;
   int& char_count = *count;
@@ -104,6 +106,9 @@ base::string16 PDFiumRange::GetText() const {
     int written = FPDFText_GetText(page_->GetTextPage(), index, count, data);
     api_string_adapter.Close(written);
   }
+
+  // Strip ignorable non-displaying whitespace
+  rv.erase(std::remove(rv.begin(), rv.end(), kZeroWidthWhitespace), rv.end());
 
   return rv;
 }
